# Hardware-Optimized-Genomic-Foundation-Models

./: .dockerignore  .gitignore  CHANGELOG.md  CODEGEN_BLUEPRINT.md  DATASETS.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  PROJECT_SPEC.md  README.md  RELEASE_NOTES.md  constraints.txt  docker-compose.yml  gpu_validation.md  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt
.github/workflows/: benchmark.yml  ci.yml  docker.yml  gpu-tests.yml
artifacts/tiny-hogfm/: metadata.json  model.safetensors  optimizer.pt  training_log.json
artifacts/tiny-hogfm/hf_export/: config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
benchmarks/results/: README.md  benchmark_summary.json  model_family_scaling.csv  scaling_report.md
cloud/aws/: ecs-task.json
cloud/azure/: container-app.yaml
cloud/gcp/: cloud-run-gpu.yaml
cloud/runpod/: template.json
configs/: deepspeed_zero3.json  fsdp.yaml  model.yaml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  BIOLOGICAL_VALIDATION.md  CLOUD.md  DEPLOYMENT.md  MATH.md  NOVEL_CONTRIBUTION.md  PROFILING.md  REPRODUCIBILITY.md  RESEARCH_REPORT.md  TUTORIAL.md  VALIDATION_MATRIX.md
examples/: inference_client.py
helm/hogfm/: Chart.yaml  values.yaml
helm/hogfm/templates/: deployment.yaml  hpa.yaml  service.yaml
k8s/: deployment.yaml  gpu-nodepool-patch.yaml  hpa.yaml  network-policy.yaml
kernels/cuda/: hogfm_kernels.cu
monitoring/: prometheus.yml
notebooks/: hogfm_quickstart.ipynb
scripts/: benchmark_throughput.py  docker_smoke.ps1  evaluate_biological_tasks.py  generate_scaling_report.py  prepare_dataset.py  profile_gpu.py  run_benchmark_suite.py  train_tiny_checkpoint.py  validate_environment.py
src/hogfm/: __init__.py  config.py  utils_optional.py
src/hogfm/api/: main.py
src/hogfm/benchmarks/: __init__.py  suite.py
src/hogfm/checkpointing/: __init__.py  manager.py
src/hogfm/data/: __init__.py  hf_integration.py  readers.py
src/hogfm/kernels/: __init__.py  attention_variants.py  flash_attention.py  linear_attention.py  triton_ops.py
src/hogfm/models/: __init__.py  genomic_transformer.py  peft_adapter.py
src/hogfm/observability/: __init__.py  experiment.py  logging.py
src/hogfm/parsing/: __init__.py  fasta.py
src/hogfm/research/: __init__.py  adaptive_compression.py
src/hogfm/tasks/: __init__.py  biological.py  promoter.py
src/hogfm/tokenization/: __init__.py  genomic_tokenizer.py
tests/: test_api_contract.py  test_attention_variants.py  test_benchmark_suite.py  test_biological_tasks.py  test_data_readers.py  test_gpu_validation.py  test_kernel_optional_imports.py  test_linear_attention.py  test_model_forward.py  test_numerical_stability.py  test_optional_dependency_safety.py  test_parsing.py  test_promoter_task.py  test_research_compression.py  test_tokenizer.py
validation/: docker_smoke.md  environment.json
validation/gpu_profiler/: summary.json  trace.json
web/: app.js  index.html  styles.css
(+4 files in other folders)
