[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware-optimized-genomic-foundation-models"
version = "0.1.0"
description = "Hardware-aware long-sequence genomic foundation model scaffold."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kant Krishan" }]
dependencies = [
  "fastapi>=0.111",
  "numpy>=1.26",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "safetensors>=0.4",
  "torch>=2.3",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
gpu = [
  "accelerate>=0.31",
  "datasets>=2.20",
  "deepspeed>=0.14",
  "flash-attn>=2.6; platform_system == 'Linux'",
  "matplotlib>=3.9",
  "peft>=0.11",
  "transformers>=4.42",
  "triton>=2.3"
]
tracking = [
  "mlflow>=2.14",
  "tensorboard>=2.17",
  "wandb>=0.17"
]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
